refactor: extract constants, reduce cognitive complexity, remove useless assignment